# alfred

./: CLAUDE.md  README.md  pyproject.toml
agentkit/: agent.py
agentkit/control/: __init__.py  autonomy.py  config.py  proposals.py
agentkit/eval/: __init__.py  scorer.py
agentkit/kernel/: __init__.py  budget.py  context.py  instructions.py  loop.py  permission.py  registries.py
agentkit/mcp/: __init__.py  manager.py
agentkit/stores/: __init__.py  _sqlite.py  project.py
agentkit/subsystems/: __init__.py
agentkit/tools/: __init__.py  bash.py  config.py  file_hash.py  goal.py  list_dir.py  memory.py  search.py  skill.py  spawn.py  web_fetch.py  write_file.py
agentkit_cli/: __init__.py  main.py  output.py
agentkit_eval/: __init__.py  runner.py  scorers.py  types.py
agentkit_fff_linux_x64/: __init__.py
agentkit_server/: __init__.py  app.py  cron.py  replay.py  scheduler.py
alfred/: __init__.py
docs/decisions/: 2026-06-15-cli-json-output-decisions.md  2026-06-15-hermes-agent-loop-decisions.md  2026-06-15-layered-instructions-decisions.md  2026-06-15-runtime-composition-decisions.md  2026-06-15-store-scope-decisions.md  2026-06-15-tools-permission-decisions.md
docs/goals/: 2026-06-15-runtime-reality-slice-goal.md
docs/plans/: 2026-06-15-001-feat-alfred-agent-loop-plan.md  2026-06-15-003-feat-runtime-reality-slice-plan.md
docs/research/: control-autonomy-config.md  eval-harness.md  hashedit-known-issues.md  kernel-context-cache.md  kernel-event-bus.md  (+13 more)
scripts/: __init__.py  ingest_wayne_skills.py  setup_fff.py
tests/: test_agent_facade.py
(+138 files in other folders)
