[project]
name = "agentkit"
version = "0.1.0"
description = "Alfred minimal agent-loop SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "litellm>=1.60",
    "loguru>=0.7",
    "pydantic>=2.8",
    "pyyaml>=6.0",
]

[project.scripts]
alfred = "agentkit_cli.main:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentkit*", "agentkit_cli*", "alfred*", "agentkit_fff_*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
